# positronic-open

./: ,gitignore  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  WORKFLOW.md  data_collection.py  data_collection_zen.py  dhgrp.py  environment.yaml  franka-test.ipynb  franka.py  franka_sim.py  geom.py  kinova_kinematics.ipynb  mjc.py  policy_runner.py  positronic.code-workspace  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-hardware.txt  requirements.txt  run.py  spacemouse.py  sync_policy_runner.py  system.py  teleop.py  webxr.py  yaml.py
.claude/: settings.json
.github/workflows/: announce-merged-pr.yaml  claude-code-review.yml  code-style.yaml  commit-signature.yaml  docker-publish.yaml  release.yaml  unit-test.yaml
assets/: franka_table.usda
assets/mujoco/: franka_table.xml  mjx_panda.xml  mjx_single_cube.xml  panda.xml  scene.xml
assets/webxr/: index.html  video-player.js
cfg/: __init__.py  env.py  test.py  ui.py
cfg/hardware/: camera.py  roboarms.py  sound.py
configs/: data_collection.yaml  policy_runner.yaml  record_renderer.yaml  sync_policy_runner.yaml  teleop.yaml  to_lerobot.yaml
configs/action/: absolute.yaml  baseline.yaml  relative.yaml  relative_robot_position.yaml  relative_target_position.yaml
configs/camera/: sl_vga_depth.yaml
configs/control_ui/: dualsense.yaml  gui.yaml  spacemouse.yaml  teleop.yaml  teleop_gui.yaml
configs/hardware/: franka_demo_v2.yaml  franka_dh.yaml  franka_dh_ik.yaml  franka_mujoco.yaml  simulator.yaml  umi.yaml
configs/interface/: teleop.yaml
configs/mujoco/: franka.yaml
configs/state/: baseline.yaml  ee.yaml  front_back_umi.yaml  octo.yaml  tqg_352x192.yaml
configs/state_mappings/: franka.yaml  franka_mujoco.yaml  umi.yaml
configuronic/: LICENSE.md  README.md  __init__.py  config.py
configuronic/examples/: basic.py  basic_example.py
configuronic/tests/: test_config.py
control/: README.md  __init__.py  ports.py  system.py  utils.py  world.py
docker/: CONTEXTS.md  Dockerfile  Dockerfile.base  Dockerfile.dreamzero  Dockerfile.groot  Dockerfile.openpi  Dockerfile.training  Dockerfile.training.cloud  Makefile  README.md  build.sh  docker-compose.phail.desktop.yml  docker-compose.phail.notebook.yml  docker-compose.phail.openpi.yml  docker-compose.phail.yml  docker-compose.yml  run-rt.sh  run.sh
docs/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  codecs.md  connect-your-model.md  data-collection.md  inference.md  model-selection.md  training-workflow.md
drivers/: __init__.py  dhgrp.py  from_config.py  sound.py  spacemouse.py  umi.py
drivers/camera/: linuxpy_video.py  merge.py  realsense.py
drivers/gripper/: dh.py
drivers/roboarm/: franka.py  kinova.py
drivers/roboarms/: franka.py
experiments/octo/: franka_controller.py  setup.sh
geom/: __init__.py  trajectory.py
geom/tests/: test_trajectory.py
hardware/: __init__.py  dhgrp.py  franka.py  from_config.py  kinova.py  sl_camera.py  sound.py  state.py  status.py  umi.py
hardware/camera/: __init__.py  linuxpy_video.py  luxonis.py  merge.py  opencv.py  realsense.py  sl_camera.py  system.py
hardware/controllers/: dualsense.py
hardware/franka_control/: CMakeLists.txt  __init__.py  franka_control.cpp  franka_control.h  python.cpp  setup.py
hardware/roboarms/: __init__.py
inference/: __init__.py  action.py  inference.py  octo_policy.py  policy.py  state.py
ironic/: __init__.py  compose.py  config.py  core.py  shared_memory.py  system.py  utils.py
ironic/tests/: __init__.py  test_compose.py  test_config.py  test_shared_memory.py  test_utils.py  test_world.py
ironic2/: __init__.py  channel.py  core.py  ironic2.py  mp.py  shared_memory.py  threading.py  utils.py  world.py
ironic2/tests/: __init__.py  test_channel.py  test_core.py  test_shared_memory.py  test_utils.py  test_world.py
notebooks/: data_browsing.ipynb  franka-test.ipynb  kinova_kinematics.ipynb  rerun.ipynb  video.ipynb
pimm/: README.md  __init__.py  core.py  data_collection.py  data_collection_umi.py  inference.py  replay_record.py  robot_controller.py  run_inference.py  shared_memory.py  testing.py  utils.py  world.py
pimm/cfg/: simulator.py  sound.py  webxr.py
pimm/dataset/: core.py  vector.py
pimm/drivers/: sound.py  webxr.py
pimm/gui/: dpg.py
pimm/inference/: action.py
pimm/tests/: __init__.py  test_shared_memory.py  test_utils.py  test_world.py  testing.py
pimm/training/: to_lerobot.py
pimm/utils/: dataset_dumper.py  registration.py
positronic/: __init__.py  data_collection.py  data_collection_umi.py  data_collection_umi_pimm.py  data_collection_zen.py  inference.py  policy_runner.py  replay_record.py  robot_controller.py  run_inference.py  sync_robot_policy_runner.py  teleop.py  webxr.py  wire.py
positronic/assets/: franka_table.usda
positronic/cfg/: codecs.py  dataset.py  env.py  eval.py  phail.py  policy.py  server.py  simulator.py  sound.py  ui.py  webxr.py
positronic/cfg2/: sound.py  webxr.py
positronic/dataset/: AGENTS.md  README.md  __init__.py  core.py  dataset.py  ds_player_agent.py  ds_writer_agent.py  episode.py  local_dataset.py  remote.py  signal.py  transforms.py  vector.py  video.py
quest_tracking/: server.py
scripts/: check_packaging.py  sync-reqs.sh
tests/: geom_test.py  test_camera_merge.py  test_compose.py  test_config.py  test_control_system.py  test_dataset_dumper.py  test_geom.py  test_ports.py  test_properties.py  test_system.py  test_utils.py
tools/: audio_notifications.py  buttons.py  dataset_dumper.py  inference.py  lerobot.py  octo_policy.py  rerun.py  rerun_vis.py  video.py
training/: positronic.code-workspace  to_lerobot.py  train_exp.ipynb  visualise_dataset.py
utilities/: act_validation.py  check_packaging.py  convert_ds.py  fake_dataset_generator.py  merge_ds.py  plot_eval.py  release_phail.py  sync_policy_runner.py  trajectory.py  trajectory.yaml  trajectory_franka.py  validate_server.py
wandb/: settings
(+326 files in other folders)
