[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "positronic"
version = "0.1.0rc1"
description = "Positronic robotics project"
requires-python = "~=3.11"
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
    "av",
    "configuronic>=0.2",
    "cvxopt",
    "dearpygui",
    "dm_control",
    "fastapi",
    "fire",
    "imageio[ffmpeg]",
    "mujoco",
    "numpy",
    "opencv-python-headless",
    "pyarrow",
    "pyturbojpeg @ git+https://github.com/lilohuang/PyTurboJPEG.git@v1.7.8",
    "robosuite",
    "numba>=0.57",
    "rerun-sdk>=0.23",
    "ruckig",
    "scipy",
    "torch",
    "uvicorn[standard]",
]

[project.optional-dependencies]
hardware = [
    "feetech-servo-sdk", # for feetech motors
    "franky-control; sys_platform == 'linux'", # for franka arm
    "kortex_api; sys_platform == 'linux'",
    "linuxpy",  # For Linux video capture
    "pinocchio",  # For Kinova
    "placo",
    "pyaudio; sys_platform == 'linux'",  # For SoundSystem
    "pymodbus",  # For DH gripper
    "pyserial", # For DH gripper
    "pyzed",  # ZED camera support
]
dev = [
    "flake8",
    "ipython",
    "jupyter",
    "opencv-python",
    "coverage",
    "pytest-cov",
    "pytest-asyncio",
    "pytest",
    "rerun-sdk[notebook]",
]
lerobot = [
    "einops>=0.8.0",
    "datasets>=2.19.0",
    "torchvision>=0.17.1",
    "diffusers>=0.27.2",
    "h5py>=3.10.0",
    "huggingface-hub>=0.25.0",
    "draccus>=0.10.0",
    "jsonlines>=4.0.0",
    "timm"
]

[tool.uv.sources.kortex_api]
url = "https://artifactory.kinovaapps.com/artifactory/generic-local-public/kortex/API/2.7.0/kortex_api-2.7.0.post5-py3-none-any.whl"

[tool.pytest.ini_options]
testpaths = [
    "pimm/tests",
    "positronic/dataset/tests",
    "positronic/geom/tests",
    "positronic/tests",
]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--cov=pimm",
    "--cov=positronic",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["pimm", "positronic"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
where = ["."]
include = [
    "positronic*",
    "pimm*",
]

[tool.setuptools.package-data]
# Include static assets and XML files needed at runtime
positronic = [
  "assets/**",
  "drivers/**/*.xml",
]
